Fix styling collapsing element

--- a/manon/components/collapsible.scss
+++ b/manon/components/collapsible.scss
@@ -20,6 +20,7 @@
     max-height: initial;
     height: auto;
     box-sizing: border-box;
+    margin: theme.$collapsing-element-margin;
     min-width: theme.$collapsing-element-min-width;
     flex-direction: theme.$collapsing-element-flex-direction;
     justify-content: theme.$collapsing-element-justify-content;
@@ -74,6 +75,10 @@
           /* Preventing default nav before to show up */
           display: none;
         }
+        &:focus,
+        &.focus {
+          outline: theme.$collapsing-element-list-item-focus-outline;
+        }
 
         &:last-child {
           border-width: theme.$collapsing-element-list-item-last-item-border-width;
@@ -100,6 +105,15 @@
           padding-left: theme.$collapsing-element-list-item-link-padding-left;
           color: theme.$collapsing-element-list-item-link-text-color;
           text-decoration: theme.$collapsing-element-list-item-link-text-decoration;
+
+          &:visited,
+          &.visited {
+            color: theme.$collapsing-element-list-item-link-visited-color;
+          }
+
+          &.destructive {
+            color: theme.$collapsing-element-list-item-link-destructive-color;
+          }
 
           &::before {
             content: theme.$collapsing-element-list-icon;
